force-app/main/default/objects/qb_Invoice_Line__c/qb_Invoice_Line__c.object-meta.xml
<CustomObject>
    <label>Quickbooks Invoice	Line</label>
    <nameField>
        <label>InvoiceLine #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quickbooks Invoice	Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>