force-app/main/default/objects/qb_Invoice_Line__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Quickbooks Invoice	Lines</relationshipLabel>
    <relationshipName>QBInvoiceLines</relationshipName>
    <type>Lookup</type>
</CustomField>