force-app/main/default/objects/qb_Invoice_Line__c/fields/qb_Invoice__c.field-meta.xml
<CustomField>
    <fullName>qb_Invoice__c</fullName>
    <label>Quickbooks Invoice</label>
    <referenceTo>qb_Invoice__c</referenceTo>
    <relationshipLabel>Quickbooks Invoice	Lines</relationshipLabel>
    <relationshipName>qb_Invoice_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>